@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-09-23T00:46:53Z",
-  "count_outdated" : 184,
-  "uniques_outdated" : 157,
-  "count" : 192,
-  "uniques" : 165,
+  "timestamp" : "2023-09-25T08:14:22Z",
+  "count_outdated" : 185,
+  "uniques_outdated" : 158,
+  "count" : 193,
+  "uniques" : 166,
   "clones" : [
-    {
-      "timestamp": "2023-09-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-09-13T00:00:00Z",
       "count": 1,
@@ -61,6 +52,15 @@
     },
     {
       "timestamp": "2023-09-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-09-25T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
